WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215194
Fix returnEarlyFromInfiniteLoopsForFuzzing in DFG and validateDoesGC
https://bugs.webkit.org/show_bug.cgi?id=215194
Summary
Fix returnEarlyFromInfiniteLoopsForFuzzing in DFG and validateDoesGC
Saam Barati
Reported
2020-08-05 15:16:31 PDT
I fixed it in FTL, but for some reason, didn't in the DFG...
Attachments
patch
(3.32 KB, patch)
2020-08-05 15:22 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2020-08-05 15:19:44 PDT
<
rdar://problem/66158641
>
Saam Barati
Comment 2
2020-08-05 15:22:45 PDT
Created
attachment 406048
[details]
patch
Mark Lam
Comment 3
2020-08-05 15:24:31 PDT
Comment on
attachment 406048
[details]
patch r=me
EWS
Comment 4
2020-08-05 17:24:54 PDT
Committed
r265313
: <
https://trac.webkit.org/changeset/265313
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406048
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug