Fix returnEarlyFromInfiniteLoopsForFuzzing in DFG and validateDoesGC https://bugs.webkit.org/show_bug.cgi?id=215194 <rdar://problem/66158641>

Reviewed by Mark Lam.

JSTests:

* stress/validate-does-gc-with-return-early-from-infinite-loop-2.js: Added.
(vm.useJIT):

Source/JavaScriptCore:

I already fixed this same issue in the FTL in r264330, but I forgot
to do it in the DFG.

* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):


Canonical link: https://commits.webkit.org/227993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265313 268f45cc-cd09-0410-ab3c-d52691b4dbfc